<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Presenters.DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/vehicle_detail_image_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/image_content_description"
                android:scaleType="centerCrop"
                android:src="@drawable/car"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/vehicle_detail_year_make_model_trim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="2022 Hyundai 3 Sonata SEL"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vehicle_detail_image_view" />

            <TextView
                android:id="@+id/vehicle_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:lines="1"
                android:text="$ 25950"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vehicle_detail_year_make_model_trim" />

            <View
                android:id="@+id/vehicle_detail_vertical_view"
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/vehicle_detail_price"
                app:layout_constraintLeft_toRightOf="@+id/vehicle_detail_price"
                app:layout_constraintTop_toTopOf="@+id/vehicle_detail_price" />

            <TextView
                android:id="@+id/vehicle_detail_milage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:lines="1"
                android:text="10.1k mi"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/vehicle_detail_price"
                app:layout_constraintStart_toEndOf="@+id/vehicle_detail_vertical_view"
                app:layout_constraintTop_toTopOf="@+id/vehicle_detail_price" />


            <View
                android:id="@+id/vehicle_detail_horizontal_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="@color/saperator_gray"
                app:layout_constraintTop_toBottomOf="@+id/vehicle_detail_price"
                tools:layout_editor_absoluteX="10dp" />

            <TextView
                android:id="@+id/vehicle_detail_vehicle_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:lines="1"
                android:text="@string/vehicle_info"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vehicle_detail_horizontal_view" />

            <TableLayout
                android:id="@+id/vehicle_detail_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vehicle_detail_vehicle_information">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/vehicle_detail_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/location"
                        android:textColor="@color/lightGray"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/vehicle_detail_location_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="Location"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size_small" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/vehicle_detail_exterior_color"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/exterior"
                        android:textColor="@color/lightGray"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/vehicle_detail_exterior_color_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="ex1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size_small" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/vehicle_detail_interior_color"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/interior"
                        android:textColor="@color/lightGray"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/vehicle_detail_interior_color_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="Inter1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size_small" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/vehicle_detail_drive_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/drive_type"
                        android:textColor="@color/lightGray"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/vehicle_detail_drive_type_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="Driv t 1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size_small" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/vehicle_detail_transmission"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/transmission"
                        android:textColor="@color/lightGray"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/vehicle_detail_transmission_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="trans"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size_small" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/vehicle_detail_body_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/body_style"
                        android:textColor="@color/lightGray"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/vehicle_detail_body_style_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="body"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size_small" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/vehicle_detail_engine"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/engine"
                        android:textColor="@color/lightGray"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/vehicle_detail_engine_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="eng"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size_small" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/vehicle_detail_fuel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/fuel"
                        android:textColor="@color/lightGray"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/vehicle_detail_fuel_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="fu"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size_small" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:layout_marginBottom="30dp"
                        android:background="@color/saperator_gray" />
                </TableRow>

            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/vehicle_detail_call_dealer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="15dp"
        android:text="Call Dealer"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_medium"
        android:textStyle="bold" />

</LinearLayout>